Adding headers for beh analysis

--- a/Behavioral_Analysis/Behavioral_Analysis.ipynb
+++ b/Behavioral_Analysis/Behavioral_Analysis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "167c4657",
+   "metadata": {},
+   "source": [
+    "# Behavioral Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c9811c6f",
@@ -11,6 +19,14 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2b33fda",
+   "metadata": {},
+   "source": [
+    "## Exercise"
    ]
   },
   {
@@ -174,6 +190,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8574dfa",
+   "metadata": {},
+   "source": [
+    "# Verbal Working Memory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0e422cc",
+   "metadata": {},
+   "source": [
+    "## Control group and ADHD group"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "820961c6",
@@ -187,6 +219,14 @@
     "adhd = ['sub-02', 'sub-04', 'sub-05', 'sub-06', 'sub-09', 'sub-10', 'sub-11', 'sub-12', 'sub-13', 'sub-17', \n",
     "        'sub-24', 'sub-25', 'sub-29', 'sub-30', 'sub-32', 'sub-33', 'sub-44', 'sub-50', 'sub-54', 'sub-55', \n",
     "        'sub-57', 'sub-66', 'sub-67', 'sub-70', 'sub-71', 'sub-73', 'sub-74', 'sub-76','sub-77', 'sub-79']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "810e373c",
+   "metadata": {},
+   "source": [
+    "## Check Control group data"
    ]
   },
   {
@@ -396,13 +436,7 @@
       "Subject ID: sub-65, Session: VLD \n",
       "sub-65: Mean Accuracy 1-back : 0.9574468085106383, Mean Accuracy 2-back : 0.8043478260869565\n",
       "sub-65: Mean response_time 1-back : 0.6244468085106384, Mean response_time 2-back : 0.6765652173913044\n",
-      "                                                   \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "                                                   \n",
       "Subject ID: sub-65, Session: VLI \n",
       "sub-65: Mean Accuracy 1-back : 0.8936170212765957, Mean Accuracy 2-back : 0.6956521739130435\n",
       "sub-65: Mean response_time 1-back : 0.7244255319148937, Mean response_time 2-back : 0.7253260869565218\n",
@@ -471,6 +505,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e5407ce",
+   "metadata": {},
+   "source": [
+    "## creat Control Group csv file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "d0516ffb",
@@ -530,6 +572,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a873ac5f",
+   "metadata": {},
+   "source": [
+    "## creat ADHD Group csv file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "2d115761",
@@ -582,6 +632,22 @@
     "       'VLI_RT_1back' : VLI_RT_1back, 'VLI_RT_2back' : VLI_RT_2back,}\n",
     "adhd_table = pd.DataFrame(df)\n",
     "adhd_table.to_csv('/Users/huangshansan/Desktop/adhd_table.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13114ddd",
+   "metadata": {},
+   "source": [
+    "## Two way ANOVA "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7fda88f",
+   "metadata": {},
+   "source": [
+    "### 1-back, Accuracy"
    ]
   },
   {
@@ -679,6 +745,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4f031f9d",
+   "metadata": {},
+   "source": [
+    "### 2-back, Accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "fa37d65a",
@@ -762,6 +836,14 @@
     "model_2back_ac = ols('Accuracy_2back~Diagnosed+Reward_timing+Diagnosed*Reward_timing', data=data).fit()\n",
     "anova_2back_ac = sm.stats.anova_lm(model_2back_ac, typ=2)\n",
     "anova_2back_ac"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93829e5d",
+   "metadata": {},
+   "source": [
+    "### 1-back, Response time"
    ]
   },
   {
@@ -851,6 +933,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3016c10b",
+   "metadata": {},
+   "source": [
+    "### 2-back, Response time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "353ce5dd",
@@ -937,6 +1027,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "673488fd",
+   "metadata": {},
+   "source": [
+    "## Regression Plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94b2ceab",
+   "metadata": {},
+   "source": [
+    "### 1-back x 2-back, Accuracy, Diagnosed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "45dd7643",
@@ -967,6 +1073,14 @@
     "# Save and Show the plot\n",
     "plt.savefig('/Users/huangshansan/desktop/vahacc.png', transparent=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e83dde86",
+   "metadata": {},
+   "source": [
+    "### 1-back x 2-back, Accuracy, Reward timing"
    ]
   },
   {
@@ -1003,6 +1117,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e949a5d8",
+   "metadata": {},
+   "source": [
+    "### 1-back x 2-back, Response time, Diagnosed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "2ea3e369",
@@ -1036,6 +1158,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2a907d7",
+   "metadata": {},
+   "source": [
+    "### 1-back x 2-back, Response time, Reward timing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "f2d940ce",
@@ -1066,6 +1196,14 @@
     "# Show the plot\n",
     "plt.savefig('/Users/huangshansan/desktop/vdirt.png', transparent=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8f1eaaf",
+   "metadata": {},
+   "source": [
+    "## Bar Plot"
    ]
   },
   {
@@ -1347,6 +1485,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2848114",
+   "metadata": {},
+   "source": [
+    "# Spatial Working Memory "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f11f1887",
+   "metadata": {},
+   "source": [
+    "## Control group and ADHD group"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "acbb2ef5",
@@ -1360,6 +1514,14 @@
     "adhds = ['sub-01', 'sub-02', 'sub-04', 'sub-06', 'sub-08', 'sub-09', 'sub-10', 'sub-11', 'sub-12', \n",
     "         'sub-13', 'sub-14', 'sub-17', 'sub-29', 'sub-30', 'sub-32', 'sub-33', 'sub-44', 'sub-54',\n",
     "         'sub-57', 'sub-66', 'sub-67', 'sub-71', 'sub-74', 'sub-76', 'sub-77', 'sub-78', 'sub-79']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ed28f61",
+   "metadata": {},
+   "source": [
+    "## creat Control Group csv file"
    ]
   },
   {
@@ -1422,6 +1584,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b54e356",
+   "metadata": {},
+   "source": [
+    "## creat ADHD Group csv file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "e532f1ea",
@@ -1478,6 +1648,22 @@
     "       'SLI_RT_1back' : SLI_RT_1back, 'SLI_RT_2back' : SLI_RT_2back,}\n",
     "ahdhs_table = pd.DataFrame(df)\n",
     "ahdhs_table.to_csv('/Users/huangshansan/Desktop/adhds_table.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d539ee3e",
+   "metadata": {},
+   "source": [
+    "## Two Way ANOVA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88f0f19c",
+   "metadata": {},
+   "source": [
+    "### 1-back, Accuracy"
    ]
   },
   {
@@ -1575,10 +1761,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c8c75ac",
+   "metadata": {},
+   "source": [
+    "### 2-back, Accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "08bcdb6f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1661,10 +1857,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7ac19ecb",
+   "metadata": {},
+   "source": [
+    "### 1-back, Response time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "9ac6e27a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1747,10 +1953,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20c487a1",
+   "metadata": {},
+   "source": [
+    "### 2-back, Response time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "3fb2ab02",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1833,6 +2049,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2803f501",
+   "metadata": {},
+   "source": [
+    "## Regression Plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0765202c",
+   "metadata": {},
+   "source": [
+    "### 1-back x 2-back, Accuracy, Diagnosed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "6a065735",
@@ -1863,10 +2095,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9404498f",
+   "metadata": {},
+   "source": [
+    "### 1-back x 2-back, Accuracy, Reward timing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "37a6d81f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1890,6 +2132,14 @@
     "# Show the plot\n",
     "plt.savefig('/Users/huangshansan/desktop/sdiacc.png', transparent=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c51ddc4",
+   "metadata": {},
+   "source": [
+    "### 1-back x 2-back, Response time, Diagnosed"
    ]
   },
   {
@@ -1923,6 +2173,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cdf7ed2b",
+   "metadata": {},
+   "source": [
+    "### 1-back x 2-back, Response time , Reward timing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "60af72cd",
@@ -1950,6 +2208,14 @@
     "# Show the plot\n",
     "plt.savefig('/Users/huangshansan/desktop/sdirt.png', transparent=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58e87698",
+   "metadata": {},
+   "source": [
+    "## Bar Plot"
    ]
   },
   {
